# portfolio-optimizer

./: .gitignore  Justfile  README.md  app.py  charts.py  data.py  flake.nix  logger.conf  optimizer.py  pyproject.toml  settings.yml  var.py
.streamlit/: config.toml
portfolio_optimizer/: charts.py  data.py  optimizer.py  settings.py  var.py
