[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Markowitz mean-variance portfolio optimizer with Streamlit interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "scipy>=1.13",
    "plotly>=5.22",
    "streamlit>=1.35",
]

[project.scripts]
optimize = "optimizer:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
