[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Markowitz mean-variance portfolio optimizer with Streamlit interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "scipy>=1.13",
    "plotly>=5.22",
    "streamlit>=1.35",
    "matplotlib>=3.10.9",
    "pyyaml>=6.0.3",
]

[project.scripts]
portfolio-optimizer = "portfolio_optimizer.app:main"

[build-system]
requires = ["setuptools>=72"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
include = ["portfolio_optimizer*"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
